# gst-plugins-bad

./: configure.ac  meson_options.txt
ext/: Makefile.am  meson.build
ext/assimp/: Makefile.am  gstassimp.c  gstassimp.h  meson.build
ext/gl/: Makefile.am  gstglbasemixer.c  gstglcolorconvertelement.c  gstglcolorconvertelement.h  gstglcolorscale.c  gstglcolorscale.h  gstgldownloadelement.c  gstglfilterbin.c  gstglimagesink.c  gstglimagesink.h  gstglmixer.c  gstglmixer.h  gstglmixerbin.c  gstglmodelrender.c  gstglmodelrender.h  gstglstereosplit.c  gstgltestsrc.c  gstgluploadelement.c  gstgluploadelement.h  gstglvideomixer.c  gstopengl.c
ext/gtk/: gstgtkglsink.c  gstgtkglsink.h  gstgtksink.c  gstgtksink.h  gstplugin.c  gtkgstglwidget.c  gtkgstglwidget.h  gtkgstwidget.c  gtkgstwidget.h
ext/sctp/: meson.build
ext/webrtc/: gstwebrtcbin.c  gstwebrtcbin.h  gstwebrtcice.c  sctptransport.c  webrtcdatachannel.c  webrtcdatachannel.h  webrtcsdp.c  webrtcsdp.h
gst-libs/gst/: Makefile.am
gst-libs/gst/3d/: 3d.h  Makefile.am  gst3dcamera.c  gst3dcamera.h  gst3dmaterialinfo.c  gst3dmaterialinfo.h  gst3dmaterialmeta.c  gst3dmaterialmeta.h  gst3dmodelmeta.c  gst3dmodelmeta.h  gst3dvertexconverter.c  gst3dvertexconverter.h  gst3dvertexformat.c  gst3dvertexformat.h  gst3dvertexinfo.c  gst3dvertexinfo.h  gst3dvertexmeta.c  gst3dvertexmeta.h  gst3dvertexpack-dist.c  gst3dvertexpack-dist.h  gst3dvertexpack.h  gst3dvertexpack.orc
gst-libs/gst/codecparsers/: gsth265parser.c  gsth265parser.h
gst-libs/gst/gl/: gstglbasefilter.c  gstglcolorconvert.c  gstglfilter.c  gstglsyncmeta.c  gstglsyncmeta.h  gstglupload.c  gstglutils.c
gst-libs/gst/gl/egl/: gstgldisplay_egl.c  gstgldisplay_egl.h
gst-libs/gst/webrtc/: meson.build  rtpreceiver.h
gst/3d/: Makefile.am  gst3d.c  gst3dvertexconvert.c  gst3dvertexconvert.h  gst3dvertexsrc.c  gst3dvertexsrc.h
pkgconfig/: gstreamer-plugins-bad-uninstalled.pc.in
sys/androidmedia/: Makefile.am  gstamcsurfacetexture.c  gstamcsurfacetexture.h  gstamcsurfacetexture_nativelistener.cpp  gstamcsurfacetexture_nativelistener.h  gstamcsurfacetexture_nativelistener.hpp  gstamcvideodec.c  gstamcvideodec.h  gstjniutils.h
sys/androidmedia/L/include/binder/: Binder.h
tests/check/: Makefile.am
tests/check/elements/: webrtcbin.c
tests/check/libs/: 3dvertex.c
tests/examples/: meson.build
tests/examples/webrtc/: meson.build
